# mass_verify

./: README.md
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
sample-proofs/waldo/po2=18/: proof-0  proof-1  proof-10  proof-11  proof-12  proof-13  proof-14  proof-16  proof-17  proof-19  proof-2  proof-21  proof-22  proof-23  proof-24  proof-25  proof-26  proof-27  proof-28  proof-29  proof-30  proof-31  proof-32  proof-5  proof-6  proof-7  proof-8  proof-9
sample-proofs/waldo/po2=19/: proof-1  proof-10  proof-13  proof-2  proof-3  proof-5  proof-6  proof-8  proof-9
sample-proofs/waldo/po2=20/: proof-0  proof-1  proof-2  proof-3  proof-6
